--- a/curriculo/style.css
+++ b/curriculo/style.css
@@ -1,6 +1,7 @@
 
 main {
 	font-family: Helvetica, sans-serif;
+	
 }
 
 
@@ -8,6 +9,7 @@ main {
 	width: 940px;
 	margin: 0 auto;
 	padding: 50px 0;
+	
 }
 
 .principal li {
@@ -92,4 +94,25 @@ main {
 	font-weight: bold;
 
 
+}
+
+@media screen and (max-width:480px) {
+
+	.painel-direito {
+
+		width: 90%;
+	
+	
+	
+	}
+
+	.painel-esquerdo {
+		width: 90%;
+	
+	}
+
+	.principal li {
+		display: block;
+	}
+	
 }
