--- a/curriculo/style.css
+++ b/curriculo/style.css
@@ -44,6 +44,7 @@ main {
 	color: #F2F3F4;
 	background: #34495E;
 	width: 40%;
+	box-shadow: 10px 10px 30px 0 rgba(0, 0, 0, 0.8);
 
 }
 
@@ -81,6 +82,7 @@ main {
 
 	background: #F2F3F4;
 	width: 58%;
+	box-shadow: 10px 10px 30px 0 rgba(0, 0, 0, 0.8);
 
 
 
@@ -126,6 +128,7 @@ main {
 
 	.painel-esquerdo {
 		width: 100%;
+		
 	
 	}
 
