--- a/curriculo/style.css
+++ b/curriculo/style.css
@@ -24,7 +24,7 @@ main {
 	border-radius: 1rem;
 	vertical-align: top;
 	padding: 4rem 3rem;
-	height: 70rem;
+	height: 67rem;
 	line-height: 1.5rem;
 
 
@@ -52,12 +52,16 @@ main {
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 2rem;
+	margin-top: 3rem;
+	margin-bottom: 2rem;
 }
 
 .painel-esquerdo h2 {
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 1.5rem;
+	margin-top: 3rem;
+	margin-bottom: 1rem;
 
 
 }
@@ -95,9 +99,15 @@ main {
 	background: #34495E;
 	padding: 1rem;
 	border-radius: 1rem;
+	margin-top: 3rem;
+	margin-bottom: 1rem;
 }
 
+
+
 .painel-direito h3 {
+
+	margin-top: 2rem;
 	text-transform: uppercase;
 	font-weight: bold;
 
