--- a/curriculo/style.css
+++ b/curriculo/style.css
@@ -7,13 +7,13 @@ body {
 	margin: auto;
 	width: 940px;
 	padding: 1rem;
+	display: flex;
 	
 }
 
 .painel {
 
 	margin: auto;
-	display: inline-block;
 	box-sizing: border-box;
 	border-radius: 1rem;
 	vertical-align: top;
@@ -82,7 +82,7 @@ body {
 
 .painel-direito {
 	background: #F2F3F4;
-	width: 58%;
+	width: 60%;
 	box-shadow: 10px 10px 30px 0 rgba(0, 0, 0, 0.8);
 
 
@@ -114,10 +114,11 @@ body {
 		width: auto;
 		max-width:500px;
 		margin: auto auto;
+		display: block;
+
 	}
 
 	.painel {
-		display: block;
 		height: auto;
 
 	}
